test/variable/redefine_constant_local.lox
// This is an extension in loxidation
{
	const a = 2;
	a = 3; // error: can't redefine constant
}
